--- a/Client/package.json
+++ b/Client/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.11.0",
+    "daisyui": "^5.1.26",
+    "jotai": "^2.13.1",
+    "jotai-devtools": "^0.13.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router": "^7.8.1",
+    "react-toastify": "^11.0.5",
+    "swagger-typescript-api": "^13.2.8",
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
